<?xml version="1.0"?>
<package format="2">
  <name>rospioneer</name>
  <version>1.1.2</version>
  <description>The rospioneer package</description>

  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
